[package]
name = "sagebox"
version = "0.1.0"
edition = "2021"
build = "build.rs"
links = "ffi_wrapper_cpp"

[package]
description = "An easy-to-use, comprehensive and procedural GUI toolset for Rust."
readme = "README.md"
repository = "https://github.com/sagebox/sagebox-rs"
homepage = "https://github.com/sagebox/sagebox-rs"
license = "MIT OR Apache-2.0"
keywords = ["gui", "procedural", "graphics"]
categories = ["gui", "development-tools"]

[badges]
maintenance = { status = "actively-developed" }

[features]
link_dynamic = []

[dependencies]

[lib]
crate-type = ["rlib"]  # Rust library
