[package]
name = "lcd_widget_full"
version = "0.1.0"
edition = "2021"

[dependencies]

sagebox = { path = "../../../sagebox"}    # uncomment to link statically
#sagebox = { path = "../../../sagebox", features = [ "link_dynamic"]  }    # uncomment to link to sagebox.dll

lcd_widget = { path = "../lib/lcd_widget" } 
